<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/black">

        <LinearLayout
            android:id="@+id/sub_screen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:editable="false"
                android:fontFamily="casual"
                android:hint="input"
                android:inputType="none"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/output"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/keys"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/f_col"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            tools:layout_width="wrap_content">

            <Button
                android:id="@+id/button23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="seven"
                android:text="@string/_7"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />


            <Button

                android:id="@+id/button24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="four"
                android:text="@string/_4"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="cursive"
                android:onClick="one"
                android:text="@string/_1"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="dot"
                android:text="@string/dot"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sec_col"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            tools:layout_width="wrap_content">

            <Button
                android:id="@+id/button30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="eight"
                android:text="@string/_8"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="five"
                android:text="@string/_5"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="two"
                android:text="@string/_2"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="zero"
                android:text="@string/_0"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thi_col"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            tools:layout_width="wrap_content">

            <Button
                android:id="@+id/button26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="nine"
                android:text="@string/_9"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="six"
                android:text="@string/_6"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="three"
                android:text="@string/_3"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_pressed"
                android:fontFamily="casual"
                android:onClick="equal"
                android:text="@string/equal"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/operation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            tools:layout_width="wrap_content">

            <Button
                android:id="@+id/button35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="casual"
                android:onClick="delete"
                android:text="C"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="casual"
                android:onClick="divided"
                android:text="@string/divided"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="casual"
                android:onClick="multiply"
                android:text="@string/times"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="casual"
                android:onClick="minus"
                android:text="@string/minus"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="casual"
                android:onClick="plus"
                android:text="@string/plus"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>